--- a/src/app.scss
+++ b/src/app.scss
@@ -2,7 +2,7 @@
 @import "./lib/styles/normalize.scss";
 
 :root {
-  color-scheme: light dark;
+  // color-scheme: light dark;
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
@@ -10,24 +10,22 @@
   -webkit-text-size-adjust: 100%;
   --step-0: clamp(0.63rem, calc(0.48rem + 0.57vw), 1.13rem);
   --step-1: clamp(0.75rem, calc(0.58rem + 0.69vw), 1.35rem);
-  --step-2: clamp(0.90rem, calc(0.69rem + 0.82vw), 1.62rem);
+  --step-2: clamp(0.9rem, calc(0.69rem + 0.82vw), 1.62rem);
   --step-3: clamp(1.08rem, calc(0.83rem + 0.99vw), 1.94rem);
-  --step-4: clamp(1.30rem, calc(1.00rem + 1.18vw), 2.33rem);
-  --step-5: clamp(1.56rem, calc(1.20rem + 1.42vw), 2.80rem);
+  --step-4: clamp(1.3rem, calc(1rem + 1.18vw), 2.33rem);
+  --step-5: clamp(1.56rem, calc(1.2rem + 1.42vw), 2.8rem);
   --step-6: clamp(1.87rem, calc(1.44rem + 1.71vw), 3.36rem);
 
   --space-3xs: clamp(0.19rem, calc(0.15rem + 0.14vw), 0.31rem);
   --space-2xs: clamp(0.31rem, calc(0.24rem + 0.29vw), 0.56rem);
-  --space-xs: clamp(0.50rem, calc(0.39rem + 0.43vw), 0.88rem);
+  --space-xs: clamp(0.5rem, calc(0.39rem + 0.43vw), 0.88rem);
   --space-s: clamp(0.63rem, calc(0.48rem + 0.57vw), 1.13rem);
   --space-m: clamp(0.94rem, calc(0.72rem + 0.86vw), 1.69rem);
   --space-l: clamp(1.25rem, calc(0.96rem + 1.14vw), 2.25rem);
   --space-xl: clamp(1.88rem, calc(1.45rem + 1.71vw), 3.38rem);
-  --space-2xl: clamp(2.50rem, calc(1.93rem + 2.29vw), 4.50rem);
+  --space-2xl: clamp(2.5rem, calc(1.93rem + 2.29vw), 4.5rem);
   --space-3xl: clamp(3.75rem, calc(2.89rem + 3.43vw), 6.75rem);
-
 }
-
 
 // /* Extra small devices (phones, 600px and down) */
 // @media only screen and (max-width: 600px) {
@@ -48,14 +46,18 @@ body,
   padding: 0;
   width: 100%;
   height: 100%;
+  overscroll-behavior-y: none;
 }
 
 body {
-  color: black;
-  font-family: Arial Grotesk,Helvetica Neue,Helvetica,Arial,sans-serif;
+  font-family: Arial Grotesk, Helvetica Neue, Helvetica, Arial, sans-serif;
   font-size: var(--step-3);
   font-weight: 400;
   line-height: 1.5;
+  text-align: justify;
+
+  background-color: var(--bg-theme-color-1);
+  color: var(--text-theme-color-1);
 
   h1 {
     font-size: var(--step-6);
@@ -66,7 +68,19 @@ body {
   h3 {
     font-size: var(--step-4);
   }
-  h4, h5, h6 {
+  h4,
+  h5,
+  h6 {
     font-size: var(--step-3);
   }
+}
+
+button {
+  @include button(var(--bg-theme-color-1));
+}
+
+img,
+video {
+  width: 100%;
+  height: 100%;
 }
