--- a/src/lib/styles/mixins/button.scss
+++ b/src/lib/styles/mixins/button.scss
@@ -8,3 +8,47 @@
     background-color: darken($bg, 25%);
   }
 }
+
+@mixin rounded($border) {
+  -webkit-border-radius: $border;
+  -moz-border-radius: $border;
+  border-radius: $border;
+}
+
+@mixin shadow {
+  -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
+  -moz-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
+}
+
+@mixin gradient($top, $bottom) {
+  background-color: $bottom;
+  background: -webkit-gradient(
+    linear,
+    left top,
+    left bottom,
+    from($top),
+    to($bottom)
+  );
+  background: -moz-linear-gradient(top, $top, $bottom);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#{$top}', endColorstr='#{$bottom}');
+}
+
+@mixin button($bg) {
+  background-color: transparent;
+  display: inline-block;
+  padding: 0;
+  outline: none;
+  cursor: pointer;
+  text-align: center;
+  text-decoration: none;
+  border: none;
+  //this determines Mozilla to show the padding
+  &:hover {
+    // background-color: darken($bg, 8%);
+    transition: background-color 0.3s ease;
+  }
+  &:active {
+    // background-color: darken($bg, 25%);
+  }
+}
